<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RC Car Remote</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_control">Button Control</string>
    <string name="device_connect">Connect to Device</string>
    <string name="autopilot">Autopilot</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="bt_not_sup">Bluetooth is not supported on this device.</string>
    <string name="confirm">Okay</string>
    <string name="pick_device">Pick your device</string>
    <string name="search_for_device">Discover new devices</string>
    <string name="title_activity_autopilot">AutopilotActivity</string>
    <string name="error">Error</string>
    <string name="connect_error">There was an error attempting to connect to your device.  Please try again.</string>
    <string name="cautious_auto">Cautious Obstacle Avoid</string>
    <string name="fast_auto">Obstacle Avoid</string>
    <string name="spiral_auto">Spiral Out</string>
    <string name="stop">Stop</string>
    <string name="title_activity_remote_control">RemoteControlActivity</string>

</resources>
