<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_margin="5dip"
        android:onClick="cautiousAutopilot"
        android:text="@string/cautious_auto" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_margin="5dip"
        android:onClick="autopilot"
        android:text="@string/fast_auto" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_margin="5dip"
        android:onClick="spiralAutopilot"
        android:text="@string/spiral_auto" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_margin="5dip"
        android:onClick="stop"
        android:text="@string/stop" />

</LinearLayout>